// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonEmpty is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props color accent is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-accent"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color accentSecondary is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-accentSecondary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color danger is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-danger"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color neutral is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-neutral"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color primary is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color risk is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-risk"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color success is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-success"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color text is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color warning is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-warning"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props contentProps is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="euiButtonEmpty__content testClass1 testClass2 emotion-euiButtonDisplayContent-euiTestCss"
    data-test-subj="test subject string"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush both is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-both"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush left is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush right is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-right"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`EuiButtonEmpty props iconSide left is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconSide right is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
    <span
      color="inherit"
      data-euiicon-type="user"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconType is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders if passed simply as disabled 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isLoading is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="Loading"
      class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
      role="progressbar"
      style="border-color: #1750ba currentcolor currentcolor currentcolor;"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size m is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size s is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size xs is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props textProps is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="aria-label"
      class="eui-textTruncate euiButtonEmpty__text testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
